--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -40,11 +40,13 @@
             android:id="@+id/tv_descrip_card"
             android:layout_width="179dp"
             android:layout_height="120dp"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/tv_title_card"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="15dp"
+            android:layout_marginBottom="18dp"
             android:layout_toEndOf="@+id/iv_card"
             android:text="STCW requires all seafarers to receive familiarisation and basic safety training or instruction in accordance with section A-VI/1 of the STCW Code"
             android:textColor="@color/secondaryDarkColor"
