--- a/app/src/main/res/layout/activity_detais.xml
+++ b/app/src/main/res/layout/activity_detais.xml
@@ -34,7 +34,7 @@
             <TextView
                 android:id="@+id/tv_details"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_details"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
@@ -83,7 +83,7 @@
             <ImageView
             android:id="@+id/iv_details"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:scaleType="centerCrop" />
 
         </RelativeLayout>
