--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -53,8 +53,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
             android:layout_marginTop="57dp"
-            android:layout_marginEnd="54dp"
+            android:layout_marginEnd="40dp"
+            android:layout_toEndOf="@+id/iv_icon"
             android:text="Valid"
             android:textColor="#38953C"
             android:textSize="18sp"
@@ -82,6 +84,7 @@
             android:layout_marginLeft="260dp"
             android:layout_marginTop="60dp"
 
+            android:layout_marginBottom="3dp"
             android:scaleType="centerCrop"
             android:src="@drawable/correct" />
 
